# homelab-services

./: .gitignore
.github/workflows/: build.yml  deploy-status-hub.yml  python-tests.yml  support-bot-py-tests.yml  tests.yml
deploy-webhook/: Dockerfile  README.md  deploy.sh  docker-compose.yaml  entrypoint.sh  hooks.json  nginx.conf
graph-telegram/: Dockerfile  about.md  configure-app.sh  docker-compose-build.yaml  nginx.conf  patch-index.sh
hello/: Dockerfile  docker-compose.yaml  hw.html
ml-service/: Dockerfile  app.py  requirements.txt
ray-cluster/: Dockerfile  docker-compose.yaml
status-hub/: index.html
support-bot/: Dockerfile  config.js  cron.js  docker-compose.yaml  package-lock.json  package.json
support-bot-py/: .gitignore  Claude.md  Dockerfile  Makefile  README.md  app.py  docker-compose-build.yaml  docker-compose.yaml  encode_token.py  gmail_service.py  goo.py  news_scheduler.py  newsletter_formatter.py  pyproject.toml  repository.py  schemas.py  settings.py  storage.py  summarizer.py  telegram.py  tts_client.py  utils.py  video_translator.py  youtube.py  youtube_diarize.py  youtube_transcript.py
support-bot-py/ban_bot/: ban_bot.py  gpt.py
support-bot-py/tests/: .env.test  conftest.py  test_app.py  test_app_integration.py  test_ban_bot.py  test_handlers.py  test_repository.py
support-bot-py/tests/data/: mock_spam_examples.json
support-bot-py/tests/sql/: init_db.sql
support-bot/lib/: openai.ts  telegram.ts
support-bot/pages/api/: health.ts  webhook.ts
support-bot/router/: router.ts
support-bot/storage/: messageRepository.ts  storage.ts
