[tool.poetry]
name = "support-bot-py"
version = "0.1.0"
description = ""
authors = ["martins0n <33594071+martins0n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.0"}
openai = "^1.44.0"
httpx = "^0.27.2"
loguru = "^0.7.2"
supabase = "^2.7.4"
tiktoken = "^0.7.0"
pydantic-settings = "^2.4.0"
langchain = "<0.2.0"
goose3 = "^3.1.19"
youtube-transcript-api = "^0.6.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
